--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </header>
 
-        <main class="container col-lg-10">
+        <main class="container col-lg-10 mt-5">
             <div class="container col-lg-12 mb-lg-5 mb-3">
                 <div class="row">
                     <div class="col">
