--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
     <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
     <script src="js/boutique.js"></script>
+    <script src="js/index.js"></script>
 
     <title>Oricam</title>
 </head>
-<body class="bg-light" onload="boutique.recupereProduits()">
+<body class="bg-light content" onload="boutique.recupereProduits()">
 
     <!-- H E A D E R --> 
     <header>
@@ -47,7 +48,7 @@
 
     <main class="container col-lg-10 mt-5">
         <!--C A R O U S E L-->
-        <div class="container col-lg-12 mb-lg-5 mb-3">
+        <div class="container col-lg-12 mb-lg-5 mb-3 car">
             <div class="row">
                 <div class="col">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
