--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
     <script src="js/boutique.js"></script>
-    <script src="js/index.js"></script>
 
     <title>Oricam</title>
 </head>
@@ -62,8 +61,8 @@
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>Équipement de photographie</h2>
                                 <p class="textBanner">Découvrez notre sélection d'appareil photo, que vous soyez amateurs ou experts en photographie<br> c'est ici que vous trouverez votre bonheur.</p>
-                                <div class="mb-3">
-                                    <a href="#appareils">Notre sélection</a>
+                                <div class="mb-3 d-none d-lg-block" id="ourSelection">
+                                    <a class="text-primary" href="#appareils">Notre sélection</a>
                                 </div>
                             </div>
                             </div>
@@ -72,8 +71,8 @@
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>Équipement de photographie</h2>
                                 <p class="textBanner">Découvrez notre sélection d'appareil photo, que vous soyez amateurs ou experts en photographie<br> c'est ici que vous trouverez votre bonheur.</p>
-                                <div class="mb-3">
-                                    <a href="#appareils">Notre sélection</a>
+                                <div class="mb-3 d-none d-lg-block" id="ourSelection">
+                                    <a class="text-primary" href="#appareils">Notre sélection</a>
                                 </div>
                             </div>
                             </div>
