--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                     <div class="col">
                         <nav class="col navbar navbar-expand-md navbar-dark">
                             <a class="navbar-brand" href="index.html">
-                                <h1 class="h2 Color">
-                                    <i class="fas fa-shopping-cart Color__logo"></i>
-                                    <span class="Color__title">Oricam</span>
+                                <h1 class="d-none d-sm-block Color">
+                                    <img src="images/Logo.png" alt="logo oricam">
+                                    <span class="Color__title">ricam</span>
                                 </h1>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
@@ -89,7 +89,7 @@
                 <h2 id="appareils" class="mb-4">Nos appareils photos</h2>
                 <div class="row mb-5">
                     <div class="col">
-                    <input class="form-control" id="searchInput" type="text" placeholder="Recherchez un appareil photo...">
+                    <input class="form-control border border-info" id="searchInput" type="text" placeholder="Recherchez un appareil photo...">
                     </div>
                 </div>
                 <div id="photoList">
