--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <nav class="col navbar navbar-expand-md navbar-dark">
                             <a class="navbar-brand" href="index.html">
                                 <h1 class="d-none d-sm-block Color">
-                                    <img src="images/logo.png" alt="logo oricam">
+                                    <img src="images/logo.PNG" alt="logo oricam">
                                     <span class="Color__title">ricam</span>
                                 </h1>
                             </a>
