--- a/panier.html
+++ b/panier.html
@@ -5,6 +5,9 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+            <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="css\style.css">
 
             <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
@@ -21,18 +24,18 @@
                         <div class="col">
                             <nav class="col navbar navbar-expand-md navbar-dark">
                                 <a class="navbar-brand" href="index.html">
-                                    <h1 class="h2">
-                                        <i class="fas fa-shopping-cart"></i>
-                                        Oricam
+                                    <h1>
+                                        <img src="logo/LogoOricam.png" alt="logo oricam">
+                                        <span class="Colortitle">ricam</span>
                                     </h1>
                                 </a>
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div id="navbarContent" class="collapse navbar-collapse">
-                                    <ul class="navbar-nav">
+                                    <ul class="navbar-nav ml-auto">
                                         <li class="nav_item">                                   
-                                            <a class="nav-link text-center text-light" href="panier.html">Panier</a>
+                                            <a class="nav-link text-center text-light" href="panier.html"><i class="fas fa-shopping-cart mr-1 Colorcart"></i> Panier</a>
                                         </li>
                                     </ul>
                                 </div>
