--- a/produit.html
+++ b/produit.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css\style.css">
 
     <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
@@ -20,20 +23,20 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <nav class="col navbar navbar-expand-md navbar-dark">
+                        <nav class="col navbar navbar-expand-md navbar-dark d-flex justify-content-between">
                             <a class="navbar-brand" href="index.html">
-                                <h1 class="h2 Color">
-                                    <i class="fas fa-shopping-cart Color__logo"></i>
-                                    <span class="Color__title">Oricam</span>
+                                <h1>
+                                    <img src="logo/LogoOricam.png" alt="logo oricam">
+                                    <span class="Colortitle">ricam</span>
                                 </h1>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
                             <div id="navbarContent" class="collapse navbar-collapse">
-                                <ul class="navbar-nav">
+                                <ul class="navbar-nav ml-auto">
                                     <li class="nav_item">                                   
-                                        <a class="nav-link text-center text-light" href="panier.html">Panier</a>
+                                        <a class="nav-link text-light" href="panier.html"><i class="fas fa-shopping-cart mr-1 Colorcart"></i> Panier</a>
                                     </li>
                                 </ul>
                             </div>
@@ -53,7 +56,7 @@
                     <div class="card border border-info shadow mb-5 mt-5">
                         <img src="" alt="Appareil photo">
                         <div class="card-body">
-                            <h1 class="h5 card-title">Nom du produit</h1>
+                            <h1 class="h3 card-title">Nom du produit</h1>
                             <p class="card-text lead"></p>
                             <div class="input-group mb-4 mt-4">
                                 <div class="input-group-prepend">
