--- a/panier.html
+++ b/panier.html
@@ -12,11 +12,12 @@
 
             <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
             <script src="js/boutique.js"></script>
+            <script src="js/utils/calculatetotal.js"></script>
 
             <title>Oricam</title>
     </head>
     
-    <body class="bg-light">
+    <body class="bg-light" onload="boutique.productInCart()">
         <header>
             <div class="bg-dark mb-4 shadow-sm">
                 <div class="container">
