--- a/produit.html
+++ b/produit.html
@@ -53,7 +53,7 @@
         <div class="container col-lg-5">
             <div class="row" id="displayDetail">
                 <div class="col">
-                    <div class="card border border-info shadow mb-5 mt-5">
+                    <div class="card border border-info shadow mb-5 mt-5 pb-4">
                         <img src="" alt="Appareil photo">
                         <div class="card-body">
                             <h1 class="h3 card-title">Nom du produit</h1>
@@ -62,23 +62,17 @@
                                 <div class="input-group-prepend">
                                 <label class="input-group-text" for="inputGroupSelect01">Objectif</label>
                                 </div>
-                                <select class="custom-select text-truncate lenseOption" id="inputGroupSelect01">
+                                <select class="form-control custom-select text-truncate lenseOption" id="inputGroupSelect01">
                                     <option disabled selected>Choissiez la taille de l'objectif</option>
                                     <!--<option value="1"></option>
                                     <option value="2"></option>
                                     <option value="3"></option>
                                     <option value="4"></option>-->
                                 </select>
-                                <div class="input-group mb-3 mt-3">
-                                    <div class="input-group-prepend">
-                                        <label class="input-group-text" for="number">Quantité</label>
-                                    </div>
-                                    <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)"> 
-                                </div>
                             </div>
                             <div class="d-flex justify-content-around">
                                 <a href="index.html" class="btn btn-outline-secondary d-none d-sm-block">Retour à l'acceuil</a>
-                                <a class="btn btn btn-success"><i class="fas fa-cart-plus mr-2"></i>Ajouter au panier</a>
+                                <button class="btn btn btn-success btn-add-to-cart" type="submit"><i class="fas fa-cart-plus mr-2"></i>Ajouter au panier</button>
                             </div>
                         </div>
                     </div>
