--- a/panier.html
+++ b/panier.html
@@ -36,7 +36,7 @@
                                 <div id="navbarContent" class="collapse navbar-collapse">
                                     <ul class="navbar-nav ml-auto">
                                         <li class="nav_item">                                   
-                                            <a class="nav-link text-center text-light" href="panier.html"><i class="fas fa-shopping-cart mr-1 Colorcart"></i> Panier</a>
+                                            <a class="nav-link text-center text-light" href="panier.html"><i class="fas fa-shopping-cart mr-1 Colorcart"></i> <span id="nbProduct"></span>Panier</a>
                                         </li>
                                     </ul>
                                 </div>
