--- a/confirmation.html
+++ b/confirmation.html
@@ -13,9 +13,9 @@
             <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
             <script src="js/boutique.js"></script>
 
-            <title>Oricam</title>
+            <title>Oricam - L'application de vente d'appareil photo</title>
     </head>
-    <body class="bg-light">
+    <body class="bg-light" onload="boutique.orderConfirmation()">
         <header>
             <div class="bg-dark mb-4 shadow-sm">
                 <div class="container">
