--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
     <script src="js/boutique.js"></script>
 
-    <title>Oricam</title>
+    <title>Oricam - L'application de vente d'appareil photo</title>
 </head>
 <body class="bg-light content" onload="boutique.recupereProduits()">
 
