--- a/panier.html
+++ b/panier.html
@@ -11,13 +11,14 @@
             <link rel="stylesheet" href="css\style.css">
 
             <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
+            <script src="js/utils/sendtheorder.js"></script>
             <script src="js/boutique.js"></script>
-            <script src="js/utils/calculatetotal.js"></script>
+            <script src="js/utils/totalprice.js"></script>
 
-            <title>Oricam</title>
+            <title>Oricam - L'application de vente d'appareil photo</title>
     </head>
     
-    <body class="bg-light" onload="boutique.productInCart()">
+    <body class="bg-light" onload="boutique.productInCart(), boutique.orderPurchase()">
         <header>
             <div class="bg-dark mb-4 shadow-sm">
                 <div class="container">
@@ -65,25 +66,26 @@
                             </thead>
                             <tbody id="resume">
                                 <!-- <tr>
-                                    <th scope="row">1</th>
-                                    <td> Teddy </td>
-                                    <td> brown </td>
-                                    <td> 1</td>
-                                    <td> price</td>
-                                    <td> throw </td>
-                                </tr> -->
+                                    <th scope="row"></th>
+                                    <td>appareil photo</td>
+                                    <td>lenses</td>
+                                    <td>qty</td>
+                                    <td>price</td>
+                                    <td>remove button</td>
+                                    </tr> -->
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <th scope="row"></th>
                                     <td>Sous Total</td>
                                     <td id="qty"></td>
+                                    <td></td>
                                     <td id="subtotal"></td>
                                 </tr>
                             </tfoot>
                         </table>
                         <div class="text-center mt-4">
-                            <a class="btn btn-info px-3" href="confirmation.html">
+                            <a class="btn btn-info px-3" href="confirmation.html" id="confirmPurchase">
                                 <i class="fas fa-shopping-cart mr-2"></i>Commander
                             </a>
                         </div>
@@ -92,33 +94,38 @@
                 
                 <section class="container-fluid mt-5 pt-3">
                     <div class="row">
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>Attention</strong> veuillez saisir vos coordonnées dans le formulaire ci-dessous.
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
                         <div class="col col-lg-6 pt-3 bg-dark border shadow border-info rounded">
                             <h2 class="text-light mb-4">Vos coordonnées</h2>
                             <form id="contact-form">
                                 <div class="form-group">
                                     <label for="last-name" class="text-light"> Nom :</label>
                                     <input type="text" class="form-control" id="last-name" placeholder="Parker" required/>
-                                    <div class="result"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="first-name" class="text-light"> Prénom :</label>
                                     <input type="text" class="form-control" id="first-name" placeholder="Peter" required/>
-                                    <div class="result"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="address" class="text-light"> Adresse :</label>
                                     <input type="text" class="form-control" id="address" placeholder="20 Ingram Street" required/>
-                                    <div class="result"></div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="address" class="text-light"> Code postal :</label>
+                                    <input type="text" class="form-control" id="zipCode" placeholder="45 150" required/>
                                 </div>
                                 <div class="form-group">
                                     <label for="city" class="text-light"> Ville :</label>
                                     <input type="text" class="form-control" id="city" placeholder="New York" required/>
-                                    <div class="result"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="email" class="text-light"> Email :</label>
                                     <input type="email" class="form-control" id="email" placeholder="email@orinoco.com" required/>
-                                    <div class="result"></div>
                                 </div>
                                 <div class="form-check mt-4">
                                     <input class="form-check-input" type="checkbox" id="saveInStorage">
@@ -161,5 +168,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+        <script>$(".alert").hide()</script>
     </body>
 </html>
