--- a/produit.html
+++ b/produit.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
     <script src="js/boutique.js"></script>
 
-    <title>Oricam</title>
+    <title>Oricam - L'application de vente d'appareil photo</title>
 </head>
 
 <body class="bg-light" onload="boutique.detailProduits()">
@@ -58,12 +58,13 @@
                         <div class="card-body">
                             <h1 class="h3 card-title">Nom du produit</h1>
                             <p class="card-text lead"></p>
+                            <div class="alert alert-success" id="success_message" role="alert">L'appareil a bien était ajouté au panier !<i class="fas fa-check-circle ml-1"></i></div>
                             <div class="input-group mb-4 mt-4">
                                 <div class="input-group-prepend">
                                 <label class="input-group-text" for="inputGroupSelect01">Objectif</label>
                                 </div>
                                 <select class="form-control custom-select text-truncate lenseOption" id="inputGroupSelect01">
-                                    <option disabled selected>Choissiez la taille de l'objectif</option>
+                                    <option disabled selected>Choisissez la taille de l'objectif</option>
                                     <!--<option value="1"></option>
                                     <option value="2"></option>
                                     <option value="3"></option>
@@ -72,8 +73,9 @@
                             </div>
                             <div class="d-flex justify-content-around">
                                 <a href="index.html" class="btn btn-outline-secondary d-none d-sm-block">Retour à l'acceuil</a>
-                                <button class="btn btn btn-success btn-add-to-cart" type="submit"><i class="fas fa-cart-plus mr-2"></i>Ajouter au panier</button>
+                                <button id="success" class="btn btn btn-success btn-add-to-cart" type="submit"><i class="fas fa-cart-plus mr-2"></i>Ajouter au panier</button>
                             </div>
+                           
                         </div>
                     </div>
                 </div>
@@ -101,11 +103,13 @@
         </div>
     </footer>
     
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js, Bootstrap JS, then hide alert -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <script>$(".alert").hide()</script>
 </body>
 </html>
