--- a/confirmation.html
+++ b/confirmation.html
@@ -15,7 +15,7 @@
 
             <title>Oricam - L'application de vente d'appareil photo</title>
     </head>
-    <body class="bg-light" onload="boutique.orderConfirmation()">
+    <body class="bg-light" onload="boutique.confirmation()">
         <header>
             <div class="bg-dark mb-4 shadow-sm">
                 <div class="container">
