--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
     <script src="js/boutique.js"></script>
@@ -64,7 +64,7 @@
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>Équipement de photographie</h2>
                                 <p class="textBanner">Découvrez notre sélection d'appareil photo, que vous soyez amateurs ou experts en photographie<br> c'est ici que vous trouverez votre bonheur.</p>
-                                <div class="mb-3 d-none d-lg-block" id="ourSelection">
+                                <div class="mb-3 d-none d-lg-block ourSelection">
                                     <a class="text-primary" href="#appareils">Notre sélection</a>
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>Équipement de photographie</h2>
                                 <p class="textBanner">Découvrez notre sélection d'appareil photo, que vous soyez amateurs ou experts en photographie<br> c'est ici que vous trouverez votre bonheur.</p>
-                                <div class="mb-3 d-none d-lg-block" id="ourSelection">
+                                <div class="mb-3 d-none d-lg-block ourSelection">
                                     <a class="text-primary" href="#appareils">Notre sélection</a>
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h4 class="text-center text-light mb-3 pt-3">Nos autres applications</h4>
+                    <h3 class="h4 text-center text-light mb-3 pt-3">Nos autres applications</h3>
                     <ul class="list-inline text-center text-light">
                         <li class="list-inline-item"><a href="#" class="text-white">Oribook</a></li>
                         <li class="list-inline-item">&middot;</li>
@@ -129,7 +129,7 @@
                         <li class="list-inline-item"><a href="#" class="text-white">Orimeuble</a></li>
                         <li class="list-inline-item">&middot;</li>
                         <li class="list-inline-item"><a href="#" class="text-white">Orinours</a></li>
-                        </ul>
+                    </ul>
                 </div>
             </div>
         </div>
