--- a/panier.html
+++ b/panier.html
@@ -8,7 +8,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
             <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="css\style.css">
+            <link rel="stylesheet" href="css/style.css">
 
             <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
             <script src="js/utils/form.js" defer></script>
@@ -54,8 +54,8 @@
             <main class="container table-responsive  mb-5">
                 <div class="row">
                     <div class="bg-dark border shadow border-info rounded pb-3 col-12 col-lg-12 overflow-auto">
+                        <h2 class="text-light mb-2 my-3">Résumé des produits dans le panier</h2>
                         <table class="table table-hover bg-light">
-                            <h2 class=" text-light mb-2 my-3">Résumé des produits dans le panier</h2>
                             <thead>
                                 <tr>
                                     <th scope="col"></th>
@@ -83,6 +83,7 @@
                                     <td id="qty"></td>
                                     <td></td>
                                     <td id="subtotal"></td>
+                                    <td></td>
                                 </tr>
                             </tfoot>
                         </table>
@@ -157,11 +158,11 @@
             </main>
         </div>
 
-        <footer class="bg-dark mt-5 pb-3 pt-4 shadow-sm">
+        <footer class="bg-dark mt-5 shadow-sm">
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h4 class="text-center text-light mb-3">Nos autres applications</h4>
+                        <h3 class="h4 text-center text-light mb-3 pt-3">Nos autres applications</h3>
                         <ul class="list-inline text-center text-light">
                             <li class="list-inline-item"><a href="#" class="text-white">Oribook</a></li>
                             <li class="list-inline-item">&middot;</li>
@@ -170,7 +171,7 @@
                             <li class="list-inline-item"><a href="#" class="text-white">Orimeuble</a></li>
                             <li class="list-inline-item">&middot;</li>
                             <li class="list-inline-item"><a href="#" class="text-white">Orinours</a></li>
-                          </ul>
+                        </ul>
                     </div>
                 </div>
             </div>
