--- a/confirmation.html
+++ b/confirmation.html
@@ -8,7 +8,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
             <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="css\style.css">
+            <link rel="stylesheet" href="css/style.css">
 
             <script src="https://kit.fontawesome.com/a2cde35cc4.js" crossorigin="anonymous"></script>
             <script src="js/config.js" defer></script>
@@ -80,11 +80,11 @@
             </div>
         </main>
 
-        <footer class="bg-dark mt-5 shadow-sm pb-4 pt-4">
+        <footer class="bg-dark mt-5 shadow-sm">
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h4 class="text-center text-light mb-3 pt-3">Nos autres applications</h4>
+                        <h3 class="h4 text-center text-light mb-3 pt-3">Nos autres applications</h3>
                         <ul class="list-inline text-center text-light">
                             <li class="list-inline-item"><a href="#" class="text-white">Oribook</a></li>
                             <li class="list-inline-item">&middot;</li>
@@ -93,7 +93,7 @@
                             <li class="list-inline-item"><a href="#" class="text-white">Orimeuble</a></li>
                             <li class="list-inline-item">&middot;</li>
                             <li class="list-inline-item"><a href="#" class="text-white">Orinours</a></li>
-                          </ul>
+                        </ul>
                     </div>
                 </div>
             </div>
